<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rrajasek.firebasedemo.MainActivity">

    <Button
        android:id="@+id/add_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_random_profile_button"
        app:layout_constraintLeft_toLeftOf="@id/view_random_profile_button"
        app:layout_constraintRight_toRightOf="@id/view_random_profile_button"

        android:text="@string/add_profile_button_text"
        />
    <Button
        android:id="@+id/view_random_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/add_profile_button"
        app:layout_constraintBottom_toTopOf="@id/update_delete_profile_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:text="@string/view_random_profile_button_text"
        />

    <Button
        android:id="@+id/update_delete_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/view_random_profile_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:text="@string/update_delete_button_text"
        />
</androidx.constraintlayout.widget.ConstraintLayout>