<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/cruzid_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/name_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:layout_margin="@dimen/input_margin"
                android:hint="@string/cruzid_input_hint"
                />
            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/cruzid_input"
                app:layout_constraintBottom_toTopOf="@id/year_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:layout_margin="@dimen/input_margin"
                android:hint="@string/name_input_hint"
                />
            <EditText
                android:id="@+id/year_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/name_input"
                app:layout_constraintBottom_toTopOf="@id/position_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:layout_margin="@dimen/input_margin"
                android:hint="@string/year_input_hint"
                />
            <Spinner
                android:id="@+id/position_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/year_input"
                app:layout_constraintBottom_toTopOf="@id/courses_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:layout_margin="@dimen/input_margin"
                />
            <EditText
                android:id="@+id/courses_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/position_input"
                app:layout_constraintBottom_toTopOf="@id/add_profile_save_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:layout_margin="@dimen/input_margin"
                android:hint="@string/courses_input_hint"
                />
            <Button
                android:id="@+id/add_profile_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/courses_input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:layout_margin="@dimen/input_margin"
                android:text="@string/add_profile_save_button_text"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>