<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfileActivity">
    <Spinner
        android:id="@+id/uid_spinner"

        android:layout_margin="@dimen/input_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/update_name_field"
        />

    <EditText
        android:id="@+id/update_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="textPersonName"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintTop_toBottomOf="@+id/uid_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/update_button"

        android:hint="@string/update_name_hint"
        />

    <Button
        android:id="@+id/update_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/update_name_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"

        android:text="@string/update_button_text"
        />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/input_margin"
        app:layout_constraintTop_toTopOf="@id/update_button"
        app:layout_constraintLeft_toRightOf="@id/update_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/update_button"

        android:text="@string/delete_button_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>